# vivarium_gates_mncnh

./: .gitattributes  .gitignore  .zenodo.json  Jenkinsfile  MANIFEST.in  Makefile  README.rst  artifact_requirements.txt  baseball.ipynb  baseball.py  environment.sh  pipeline_config.yaml  pipeline_config_v1.yaml  pipeline_config_v2.yaml  pipeline_config_v3.yaml  pipeline_config_v4.yaml  pyproject.toml  requirements.txt  run_config.yaml  setup.py  workflow_config.yaml
.github/: pull_request_template.md
.github/workflows/: build.yml
src/vivarium_gates_mncnh/: __about__.py  __init__.py  utilities.py
src/vivarium_gates_mncnh/components/: __init__.py  antenatal_care.py  children.py  delivery_facility.py  hemoglobin.py  intervention.py  intrapartum.py  lbwsg.py  maternal_disorders.py  maternal_sepsis.py  mortality.py  neonatal_causes.py  observers.py  population.py  pregnancy.py  propensity.py  screening.py  tree.py
src/vivarium_gates_mncnh/constants/: data_keys.py  data_values.py  metadata.py  models.py  paths.py  scenarios.py
src/vivarium_gates_mncnh/data/: builder.py  extra_gbd.py  ifa_ga_shifts.csv  ifa_gestational_age_shifts.ipynb  lbwsg_paf.yaml  lbwsg_paf_branches.yaml  loader.py  sampling.py  sim_utils.py  updated_mms_shifts.csv  utilities.py
src/vivarium_gates_mncnh/model_specifications/: artifact_workflow.yaml  causes.yaml  model_spec.yaml  no_intervention.yaml  (+1 more)
tests/: conftest.py  test_anc.py  test_hemoglobin_depression_sepsis.py  test_hemorrhage_temporal_ordering.py  test_intrapartum.py  test_lbwsg.py  test_lbwsg_affected_causes.py  test_mocker.py  test_mortality.py  test_neonatal_mortality_decomposition.py  test_pregnancy.py  test_sepsis_hemoglobin.py  test_sepsis_hemoglobin_smoke_check.py  utilities.py
tests/automated_v_and_v/: conftest.py  test_formatting.py  test_measures.py
tests/model_notebooks/: test_notebooks.py
(+419 files in other folders)
